--- a/nx.json
+++ b/nx.json
@@ -5,6 +5,7 @@
       "runner": "nx-cloud",
       "options": {
         "cacheableOperations": [
+          "build",
           "lint",
           "test",
           "e2e"
