--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,11 @@ Thumbs.db
 
 # Next.js
 .next
+
+# Auto Generated PWA files
+**/public/sw.js
+**/public/workbox-*.js
+**/public/worker-*.js
+**/public/sw.js.map
+**/public/workbox-*.js.map
+**/public/worker-*.js.map
