--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cmdk": "^0.2.0",
     "lucide-react": "^0.265.0",
     "next": "13.4.1",
+    "next-pwa": "^5.6.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwind-merge": "^1.14.0",
@@ -31,6 +32,7 @@
     "@nx/workspace": "16.6.0",
     "@testing-library/react": "14.0.0",
     "@types/jest": "^29.4.0",
+    "@types/next-pwa": "^5.6.4",
     "@types/node": "18.14.2",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
